# airline-tweets-sentiment-analysis

./: .gitignore  README.md  pyproject.toml
lightning_logs/version_0/: events.out.tfevents.1656708448.death-star.74914.8  events.out.tfevents.1656711377.death-star.88695.0
lightning_logs/version_0/checkpoints/: epoch=19-step=2380.ckpt
notebooks/: main.ipynb
streamlit_app/: main.py
