[tool.poetry]
name = "airline-sentiment"
version = "0.1.0"
description = "Project to make predictive models from Airline related Tweets"
authors = ["martins6 <adrielfalcao@gmail.com>"]
license = "The Unlicense"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.3"
numpy = "^1.23.0"
matplotlib = "^3.5.2"
seaborn = "^0.11.2"
jupyter = "^1.0.0"
scikit-learn = "^1.1.1"
sentence-transformers = "^2.2.2"
torch = "^1.12.0"
torchvision = "^0.13.0"
torchaudio = "^0.12.0"
pytorch-lightning = "^1.6.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
